2008-09-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi (The Gnus Registry): Don't give argument to @item used in
	@enumerate section so as to be able to be formatted with MAKEINFO=no.

2008-09-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi (Top, Setup, Fancy splitting to parent)
	(Store custom flags and keywords, Store arbitrary data): Clean up
	markup.

2008-09-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus.texi (The Gnus Registry): Document it.

2008-09-08  David Engster  <dengste@eml.cc>

	* gnus.texi (nnmairix): Point out that nnml uses MH format.  Clarify
	section about choosing back end servers.

2008-07-30  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Sorting the Summary Buffer, Summary Sorting): Add
	gnus-summary-sort-by-most-recent-number and
	gnus-summary-sort-by-most-recent-date.
	(Summary Sorting): Explain prefix argument.

2008-07-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi (Saving Articles): Mention symbolic prefix `r' for
	gnus-summary-pipe-output.

2008-07-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi (Saving Articles): Describe the 2nd argument of
	gnus-summary-save-in-pipe.
	(SpamAssassin): Use it.

2008-07-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi (SpamAssassin): Fix gnus-summary-save-in-pipe usage.

2008-07-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi (Saving Articles): Mention
	gnus-summary-pipe-output-default-command and gnus-summary-save-in-pipe.

2008-06-16  Glenn Morris  <rgm@gnu.org>

	* pgg.texi, sasl.texi: Add Cover-Texts.

2008-06-15  Glenn Morris  <rgm@gnu.org>

	* sasl.texi: Refer to license in Emacs manual.

	* gnus-coding.texi: Refer to license in Gnus manual.

	* emacs-mime.texi, gnus.texi, message.texi, sieve.texi:
	Remove references to external license, since doclicense is included.

2008-06-13  Glenn Morris  <rgm@gnu.org>

	* emacs-mime.texi, gnus-coding.texi, gnus.texi, message.texi
	* sieve.texi: Update Back-Cover Text as per maintain.info.
